set(NAME execution_benchmark)
project(${NAME})
add_compile_definitions(CCAPI_ENABLE_LOG_INFO)
add_compile_definitions(CCAPI_ENABLE_SERVICE_EXECUTION_MANAGEMENT)
add_compile_definitions(CCAPI_ENABLE_SERVICE_MARKET_DATA)
add_compile_definitions(CCAPI_ENABLE_EXCHANGE_DERIBIT)
add_executable(${NAME} main.cpp)
